<resources>
    <string name="app_name">CAB</string>
    <string name="welcom_driver">I\'m a Driver</string>
    <string name="welcom_customer">I\'m a Customer</string>
    <string name="DriverLogin_tv">Driver Login</string>
    <string name="drive_email">Email</string>
    <string name="drive_pass">password</string>
    <string name="drive_login">Login</string>
    <string name="drive_NoAccont">Don\'t have an Account?</string>
    <string name="CustomerLogin_tv">Customer Login</string>
    <string name="register_btn">Register</string>
    <string name="registration">Driver Register</string>
    <string name="customer_regisration">Customer Register</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="driverlogin">Deiver Login</string>
    <string name="driverWait">please Wait , while we are checking your credientials</string>
    <string name="logindone">Driver login Successfuly</string>
    <string name="loginfield">Login Unsuccessfuly</string>
    <string name="driverregister">Driver Registration</string>
    <string name="driverChecking">please Wait , while we are register your data</string>
    <string name="registerdone">Driver Register Successfuly</string>
    <string name="registerfield">Registration Unsuccessfuly</string>
    <string name="customerlogin">Customer Login</string>
    <string name="CoustomerWait">please Wait , while we are checking your credientials</string>
    <string name="logincustomerdone">Customer login Successfuly</string>
    <string name="logincustomerfield">Login Unsuccessfuly</string>
    <string name="title_activity_drivers_maps">Map</string>
    <string name="Driver_logout_btn">Logout</string>
    <string name="Driver_Setting_btn">Settings</string>
    <string name="title_activity_customers_map">Map</string>
    <string name="customer_settings">Settings</string>
    <string name="customer_Logout">Logout</string>
    <string name="customer_call">Call a Car</string>
    <string name="gettingdriver">Getting Your Driver ......</string>
    <string name="lookingFor">Looking For Driver Location ... </string>
    <string name="driverfound">Driver Found</string>
    <string name="call">Call a Car</string>
    <string name="reached">Driver\'s Reached</string>
    <string name="setting_change">Change Picture</string>
    <string name="setting_your_name">Your Name</string>
    <string name="setting_your_phone">Your phone number</string>
    <string name="setting_your_car_name">Your Car Name</string>
</resources>
