<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activity.CustomersMapActivity" >


    <Button
        android:id="@+id/customer_settings"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customer_settings"
        android:background="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        map:layout_constraintEnd_toStartOf="@+id/customer_logout"
        map:layout_constraintHorizontal_bias="0.5"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/customer_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/customer_Logout"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        map:layout_constraintHorizontal_bias="0.5"
        android:textAllCaps="false"
        android:background="@color/colorPrimaryDark"
        android:textColor="@android:color/white"
        android:textStyle="bold"
        map:layout_constraintStart_toEndOf="@+id/customer_settings" />


    <fragment
        android:id="@+id/map_driver"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        map:layout_constraintBottom_toTopOf="@+id/customer_call"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toBottomOf="@id/customer_logout" />

    <Button
        android:id="@+id/customer_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/customer_call"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>