<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.Activity.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar_seetings"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/colorPrimaryDark">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/close_button"
                    android:layout_width="30dp"
                    android:layout_height="40dp"
                    android:src="@drawable/close"
                    android:layout_marginStart="5dp"
                    android:tint="@android:color/white"/>

                <ImageView
                    android:id="@+id/save_button"
                    android:layout_width="40dp"
                    android:layout_height="50dp"
                    android:src="@drawable/save_edited_info"
                    android:tint="@android:color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="20dp"/>

            </RelativeLayout>


        </androidx.appcompat.widget.Toolbar>


    </com.google.android.material.appbar.AppBarLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/profile"
        app:civ_border_width="2dp"
        app:civ_border_color="@color/colorPrimaryDark"
        android:layout_below="@id/app_bar_settings"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/change_picture_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/setting_change"
        android:layout_below="@id/profile_image"
        android:layout_centerHorizontal="true"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="5dp"
        android:textColor="@color/colorPrimaryDark"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_your_name"
        android:layout_below="@id/change_picture_btn"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_your_phone"
        android:layout_below="@id/name"
        android:inputType="number"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/driver_car_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/setting_your_car_name"
        android:layout_below="@id/phone"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:visibility="gone"/>




</RelativeLayout>